--- a/package.json
+++ b/package.json
@@ -10,14 +10,27 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-oauth/google": "^0.7.1",
+    "@sanity/client": "^5.2.1",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.5",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.3.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
